tests/baselines/reference/moduleProperty2.errors.txt
tests/cases/compiler/moduleProperty2.ts(7,15): error TS2304: Cannot find name 'x'.
tests/cases/compiler/moduleProperty2.ts(12,17): error TS2339: Property 'y' does not exist on type 'typeof M'.


==== tests/cases/compiler/moduleProperty2.ts (2 errors) ====
    module M {
        function f() {
            var x;
        }
        var y;
        export var z;
        var test1=x;
                  ~
!!! error TS2304: Cannot find name 'x'.
        var test2=y; // y visible because same module
    }
    
    module N {
        var test3=M.y; // nope y private property of M
                    ~
!!! error TS2339: Property 'y' does not exist on type 'typeof M'.
        var test4=M.z; // ok public property of M
    }